--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,12 @@ a:hover {
   color: #535bf2;
 }
 
+/* NavLink */
+a.active{
+  color:green;
+  text-transform: uppercase;
+}
+
 body {
   margin: 0;
   display: flex;
