--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,6 @@ main{
   width: 200px;  
 }
 
-
 .list{
   display: flex;
   flex-wrap: wrap;
@@ -30,10 +29,29 @@ main{
   gap: 20px;
 }
 
+.header-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
 nav a{
   color: black;
 }
 
 nav a.active{
   color:bisque;
+}
+
+nav ul{
+ list-style: none;
+ gap: 20px;
+ display: flex;
+ justify-content: flex-end;
+}
+
+nav li{
+  display: inline;
+  justify-content: flex-end;
 }
